--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -1,7 +1,9 @@
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+bcrypt==4.0.0
 cffi==1.15.1
 click==8.1.3
+cryptography==37.0.4
 Flask==2.1.3
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.3
@@ -10,11 +12,14 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-psycopg2>=2.9.3 --no-binary psycopg2
+paramiko==2.11.0
+psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
+PyNaCl==1.5.0
 python-dotenv==0.20.0
 six==1.16.0
-typing-extensions==4.3.0
+sshtunnel==0.4.0
+typing_extensions==4.3.0
 Werkzeug==2.1.2
 zipp==3.8.1
