--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -7,6 +7,7 @@ cryptography==37.0.4
 Flask==2.1.3
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.3
+greenlet==1.1.3
 gunicorn==20.1.0
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
@@ -19,6 +20,7 @@ PyJWT==2.4.0
 PyNaCl==1.5.0
 python-dotenv==0.20.0
 six==1.16.0
+SQLAlchemy==1.4.41
 sshtunnel==0.4.0
 typing_extensions==4.3.0
 Werkzeug==2.1.2
